<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <Button
        android:id="@+id/btn_pair"
        android:layout_width="125dp"
        android:layout_height="wrap_content"        
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:text="@string/text_pair" />
    
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btn_pair"
        android:layout_toLeftOf="@+id/btn_pair"
        android:text="@string/pair_text"
        android:textColor="#000000"
        android:textSize="16sp" />
	
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_pair"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_pair"
        android:text="@string/much_zeros" />
    
</RelativeLayout>